bdr.BDR2.scala.code
while (estSurMessage()) {
  var lettre=litMessage()
  lettre match {
    case R => droite(); avance()
    
  }
}
